@@ -6,9 +6,13 @@
 // C++
 #include <string>
 #include <vector>
+#include <map>
 
 // xAOD
 #include "xAODTruth/TruthEventContainer.h"
+
+//Root
+#include <TH1F.h>
 
 namespace ttH 
 {
@@ -33,20 +37,36 @@ namespace ttH
     std::string AsStr() const;
   };
 
+    enum decaymode {
+        bb,cc,ss,
+        WW,ZZ,gg,
+        tautau,mumu,
+        gamgam,Zgamma,taugamma,
+        unclassified,noproducts,nohiggs,
+        problem};
+   
+  
 
   class TruthSelector {
-  public:
+ 
     
+   public:
     TruthSelector();
     virtual ~TruthSelector();
     
     void Initialize();
     
     const std::vector<TruthPart>& SelectTruth(const xAOD::TruthParticleContainer *truths);
+ 
+    decaymode GetHiggsDecayMode(const xAOD::TruthParticle* part);
+    std::vector<std::string> GetHiggsDecayModeString(const xAOD::TruthParticleContainer *truthCont);
+
+    void FillHiggsDecayMode(TH1F* hist, const xAOD::TruthParticleContainer *truths);
     
   private:
     
     bool IsGoodTop    (const int pdgId, const std::vector<int>& children);
+    bool IsGoodHiggs  (const int pdgId, const std::vector<ttH::TruthPart> &children);
     bool IsGoodHiggs  (const int pdgId, const std::vector<int>& children);
     bool IsGoodW      (const int pdgId, const std::vector<int>& children);
     bool IsGoodZ      (const int pdgId, const std::vector<int>& children);
@@ -65,7 +85,6 @@ namespace ttH
     void PruneSelectedParticles();
 
   private:
-    
     bool                                m_debug;
     int                                 m_ntotal;
     int                                 m_nselect;
@@ -73,6 +92,7 @@ namespace ttH
     const xAOD::TruthParticleContainer *m_truths;
     
     std::vector<TruthPart>              m_select;
+    std::map<int,std::string>           decaymodestr;
   }; // class TruthSelector
 }
 
