@@ -1,3 +1,6 @@
+2015-10-22
+	* Adding higgs decay mode to the ntuples
+
 2015-10-15 David Hohn <dhohn@cern.ch>
 	* Add DuplicateSelector to veto double events, enabled for data
 	* update data config for 2.3.30 as well
